# ogon-apps

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindDependency.cmake  FindQT5.cmake
doc/: SCOPES.md
libs/: CMakeLists.txt
libs/ogon-message/: CMakeLists.txt  ogon-message.cpp  ogon-message.pc.in  ogon-messageConfig.cmake.in  ogon-message_de.ts  ogon-message_en.ts
libs/ogon-message/include/ogon-message/: ogon-message.h
ogon-message/: CMakeLists.txt  main.cpp  qogonmessage.cpp  qogonmessage.h
packaging/deb/ogon-apps/: .gitignore  changelog  control  copyright  ogon-apps-dev.install  ogon-apps.install  rules
packaging/rpm/: ogon-apps.spec
shadow/: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  sessionmodel.cpp  sessionmodel.h  workerthread.cpp  workerthread.h
